--- a/app/globals.css
+++ b/app/globals.css
@@ -132,4 +132,7 @@
   h6 {
     @apply font-heading;
   }
+  .yellow-shadow {
+    @apply shadow-[0_0_0_1px_rgba(255,255,255,0.06),0_0_15px_#fbeb04];
+  }
 }
