--- a/app/globals.css
+++ b/app/globals.css
@@ -82,6 +82,16 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --accent: #fbeb04;
+  --glass: rgba(255, 255, 255, 0.06);
+  --stroke: rgba(255, 255, 255, 0.12);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --glass: rgba(255, 255, 255, 0.08);
+    --stroke: rgba(255, 255, 255, 0.2);
+  }
 }
 
 .dark {
@@ -97,7 +107,7 @@
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
+  /* --accent: oklch(0.269 0 0); */
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
@@ -137,3 +147,6 @@
     @apply shadow-[0_0_0_1px_rgba(255,255,255,0.06),0_0_11px_#fbeb04];
   }
 }
+/* * {
+  outline: 1px solid red;
+} */
